Prevent images from being too large

--- a/pasteImagesAndDownload/style.css
+++ b/pasteImagesAndDownload/style.css
@@ -10,3 +10,7 @@
     bottom: 8px;
     left: 8px;
 }
+
+img {
+    max-width: 100%;
+}
